# Simple-Social-FastAPI-Streamlit

./: .env.example  .gitignore  README.md  frontend.py  main.py  pyproject.toml
app/: app.py  db.py  images.py  schemas.py  users.py
